--- a/components/slices/JsBanner/style.scss
+++ b/components/slices/JsBanner/style.scss
@@ -19,11 +19,6 @@
       height: 506px;
     }
 
-    @include mq(xxl) {
-      width: 50%;
-      height: 800px;
-    }
-
     .is-mobile-first & {
       @include mq-less(md) {
         &:nth-child(2) {
@@ -55,7 +50,7 @@
     padding-right: 20px;
     padding-left: 20px;
     position: absolute;
-    z-index: 10;
+    z-index: 30;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
@@ -141,6 +136,8 @@
       width: 100%;
       object-fit: cover;
       object-position: center;
+      position: relative;
+      z-index: 20;
     }
   }
 }
