--- a/styles/js-slices/style.scss
+++ b/styles/js-slices/style.scss
@@ -6,3 +6,4 @@
 @import "../../components/slices/JsVimeoVideoBox/style";
 @import "../../components/slices/JsBanner/style";
 @import "../../components/slices/JsCarouselProduct/style";
+@import "../../components/slices/JsCatalogBanner/style";
