add gallery cards

--- a/styles/js-slices/style.scss
+++ b/styles/js-slices/style.scss
@@ -7,3 +7,4 @@
 @import "../../components/slices/JsBanner/style";
 @import "../../components/slices/JsCarouselProduct/style";
 @import "../../components/slices/JsCatalogBanner/style";
+@import "../../components/slices/JsGalleryCards/style";
