--- a/components/slices/JsGalleryCards/style.scss
+++ b/components/slices/JsGalleryCards/style.scss
@@ -3,7 +3,6 @@
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  margin-top: -30px;
   @include mq(md) {
     align-items: flex-start;
     flex-direction: row;
@@ -11,11 +10,17 @@
   }
 
   &__item {
-    margin-top: 30px;
+    margin-bottom: 30px;
     width: 100%;
     max-width: 400px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
     @include mq(md) {
       @include col(4, 3, 30px);
+      margin-bottom: 0;
     }
 
     &.is-left {
@@ -28,6 +33,7 @@
         text-align: left;
       }
     }
+
     &.is-right {
       text-align: right;
     }
@@ -55,13 +61,14 @@
     }
 
     &-title {
-      font-size:  1.2rem;
+      font-size: 1.2rem;
       margin-bottom: .8em;
       color: #313236;
     }
+
     &-note {
       color: #313236;
-      font-size:  0.9rem;
+      font-size: 0.9rem;
       margin-bottom: 1.2em;
     }
 
