add fill-banner slice

--- a/styles/js-slices/style.scss
+++ b/styles/js-slices/style.scss
@@ -8,3 +8,4 @@
 @import "../../components/slices/JsCarouselProduct/style";
 @import "../../components/slices/JsCatalogBanner/style";
 @import "../../components/slices/JsGalleryCards/style";
+@import "../../components/slices/JsFillBanner/style";
