add JS Image overlay slice

--- a/styles/js-slices/style.scss
+++ b/styles/js-slices/style.scss
@@ -9,3 +9,4 @@
 @import "../../components/slices/JsCatalogBanner/style";
 @import "../../components/slices/JsGalleryCards/style";
 @import "../../components/slices/JsFillBanner/style";
+@import "../../components/slices/JsImageOverlay/style";
