--- a/components/slices/JsImageOverlay/style.scss
+++ b/components/slices/JsImageOverlay/style.scss
@@ -53,7 +53,7 @@
   }
 
   &__btn {
-    height: 41px;
+    height: 50px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -83,7 +83,11 @@
       font-size: 20px;
       text-transform: uppercase;
       margin-bottom: 0.8em;
-      line-height: 1.4;
+      line-height: 1.3;
+
+      @include mq(md) {
+        font-size: 34px;
+      }
 
       p {
         margin: 0;
