add slice JsSideBySide

--- a/styles/js-slices/style.scss
+++ b/styles/js-slices/style.scss
@@ -10,3 +10,4 @@
 @import "../../components/slices/JsGalleryCards/style";
 @import "../../components/slices/JsFillBanner/style";
 @import "../../components/slices/JsImageOverlay/style";
+@import "../../components/slices/JsSideBySide/style";
